fix image spacing

--- a/frontend/styles/homepage.scss
+++ b/frontend/styles/homepage.scss
@@ -6,6 +6,7 @@
 
 .hero-illustration {
   width: 12rem;
+  height: auto;
   @include media-breakpoint-up(lg) {
     width: 16rem;
   }
